--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -37,10 +37,14 @@
 					<a class="nav-link" id="points-rules" href="{% url 'home_app:points_rules' %}">Reglas de puntos</a>
 				</li>
 				<li class="nav-item m-1">
-					<a class="cart nav-link position-relative" href="{% url 'checkout_app:cart' %}">
+					<a class="cart nav-link position-relative" href="{% url 'order_app:cart' %}">
 						<img class="cart-shopping" src="{% static 'img/cart_shopping.svg' %}" alt="cart">
-						<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-							99
+						<span class="quantity-items position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+							{% if quantity_items > 0 %}
+							{{ quantity_items }}
+							{% else %}
+							0
+							{% endif %}
 						</span>
 					</a>
 				</li>
@@ -61,56 +65,25 @@
 			<img class="mini-cart-close position-absolute" src="{% static 'img/x-close2.svg' %}" alt="close cart">
 		</div>
 		<ul>
-			<li
-				class="box-cart__li d-flex border-bottom my-1 justify-content-center align-items-center">
-				<a href="#"><img class="img-product-mini-cart"
-						src="https://katyshop303.com/wp-content/uploads/2021/04/s-l1600-5.jpg"
-						alt="product"></a>
+			{% for item in cart_items %}
+			<li class="box-cart__li d-flex border-bottom my-1 justify-content-center align-items-center">
+				<a class="link-item" href="{% url 'product_app:product' item.product.slug %}"><img class="img-product-mini-cart"
+					src="{{ item.product.product_image.all.first.image.url }}" alt="product"></a>
 				<div class="box-cart__div">
-					<a class="d-block" href="#">New Truvy TruVision Health Truvy Weight Loss
-						Combo 1 Month (30 Day)
-						Truvy</a>
-					<span class="text-success">1 x $87.93</span>
+					<a class="link-item d-block" href="{% url 'product_app:product' item.product.slug %}">{{ item.product.name }}</a>
+					<span class="text-success">{{ item.amount }} x ${{ item.product.price }}</span>
 				</div>
-				<img class="product-remove" src="{% static 'img/x-circle.svg' %}"
-					alt="product_remove">
+				<img class="product-remove" src="{% static 'img/x-circle.svg' %}" data-product-id="{% url 'order_app:delete_mini_cart' item.product.id %}" alt="product_remove">
 			</li>
-			<li
-				class="box-cart__li d-flex border-bottom my-1 justify-content-center align-items-center">
-				<a href="#"><img class="img-product-mini-cart"
-						src="https://katyshop303.com/wp-content/uploads/2021/03/ittK9pM0MSkLkeWX.jpg"
-						alt="product"></a>
-				<div class="box-cart__div">
-					<a class="d-block" href="#">TRUVISION GEN2 + TruWeight & Energy 30-day
-						supply Green only</a>
-					<span class="text-success">1 x $87.93</span>
-				</div>
-				<img class="product-remove" src="{% static 'img/x-circle.svg' %}"
-					alt="product_remove">
-			</li>
-			<li
-				class="box-cart__li d-flex border-bottom my-1 justify-content-center align-items-center">
-				<a href="#"><img class="img-product-mini-cart"
-						src="https://katyshop303.com/wp-content/uploads/2022/04/s-l500-4.jpg"
-						alt="product"></a>
-				<div class="box-cart__div">
-					<a class="d-block" href="#">New Truvy TruVision Health Truvy Weight Loss
-						Combo 1 Month (30 Day)
-						Truvy Pack</a>
-					<span class="text-success">1 x $87.93</span>
-				</div>
-				<img class="product-remove" src="{% static 'img/x-circle.svg' %}"
-					alt="product_remove">
-			</li>
+			{% endfor %}
 		</ul>
-		<p
-			class="subtotal-preview-cart p-3 d-flex justify-content-between align-items-center bg-body-secondary m-0 border-top border-bottom">
+		<p class="subtotal-preview-cart p-3 d-flex justify-content-between align-items-center bg-body-secondary m-0 border-top border-bottom">
 			<strong>SUBTOTAL:</strong>
-			<strong class="text-success">$ 1257.98</strong>
+			<strong class="cart-preview-subtotal text-success">$ {{ cart_subtotal }}</strong>
 		</p>
 		<div class="btn-cart-or-checkout py-3 d-flex justify-content-around">
-			<a class="view-cart" href="{% url 'checkout_app:cart' %}"><strong>VER CARRO</strong></a>
-			<a class="checkout-mini-cart" href="{% url 'checkout_app:checkout' %}"><strong>PAGAR</strong></a>
+			<a class="view-cart" href="{% url 'order_app:cart' %}"><strong>VER CARRO</strong></a>
+			<a class="checkout-mini-cart" href="{% url 'order_app:checkout' %}"><strong>PAGAR</strong></a>
 		</div>
 	</div>
 </div>
