--- a/static/css/store.css
+++ b/static/css/store.css
@@ -22,8 +22,12 @@
     text-align: center;
 }
 
+.link-card-img {
+    width: fit-content;
+}
 .own-card-img {
     min-width: 6.375rem;
+    max-width: 6.375rem;
     height: 6.375rem;
     object-fit: contain;
 }
@@ -55,6 +59,23 @@
 }
 .btn-add-cart {
     padding: 0.2rem 0.4rem;
+}
+/* loading to cart */
+.loader-add-to-cart {
+    display: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0009;
+}
+.loader-add-to-cart img {
+    display: block;
+    width: 25%;
+    margin: auto;
 }
 
 /* Pagination of store */
