--- a/static/css/checkout.css
+++ b/static/css/checkout.css
@@ -42,7 +42,7 @@
     color: #0b0;
 }
 /* Form Payment */
-#form-payment {
+.div-payment {
     margin: 0.7rem 0rem 1rem 0rem;
     padding: 0.5rem 1.5rem;
     background-color: #fff;
